# hippolink_ros

./: CMakeLists.txt  package.xml  setup.py
config/: transceiver.yaml
launch/: data_processing.launch  transceiver.launch
msg/: RadioRssiReport.msg  RadioStatusLocal.msg  RadioStatusRemote.msg
nodes/: data_processing_node.py  fake_transceiver_node.py  rate_watcher_node.py  transceiver_node.py
src/hippolink_ros/: __init__.py  common.py  transceiver.py
